<resources>

    <string name="title_activity_accelerometer">AccelerometerActivity</string>
    <string name="app_name">Survival</string>
    <string name="title_activity_earthquake">EarthquakeActivity</string>
    <string name="title_activity_tsunami">TsunamiActivity</string>
    <string name="title_activity_terrorist">TerroristActivity</string>

    <string name="injured_question">Someone is injured</string>
    <string name="stuck_question">Someone is stuck</string>
    <string name="urgentHelp_question">Someone needs urgent help</string>
    <string name="potentialDanger_question">Someone is still in danger</string>

    <string name="action_settings">Settings</string>
    <string name="action_map">Map statistics</string>
    <string name="action_tips">Survival tips</string>
    <string name="action_main">Answer quiz</string>

    <string name="basicNeeds_butt">Basic needs</string>
    <string name="suppNeeds_butt">Supporting Needs</string>
    <string name="surroundings_butt">Surroundings state</string>
    <string name="extra_butt">Extra information</string>

    <string name="buildingDestruction_text">Level of building destruction:</string>
    <string-array name="buildingDestruction_arrays">
        <item>None</item>
        <item>Some minor destruction</item>
        <item>Several affected buildings</item>
        <item>Most of the buildings</item>
    </string-array>

    <string name="survivalDays_text">I (we) can survive for:</string>
    <string-array name="survivalDays_arrays">
        <item>Less than one</item>
        <item>1-2 days</item>
        <item>3-4 days</item>
        <item>More than 4</item>
    </string-array>

    <string name="waterLevel_text">Level of water:</string>
    <string-array name="waterLevel_arrays">
        <item>None</item>
        <item>1-3 meters</item>
        <item>3-5 meters</item>
        <item>More than 5</item>
    </string-array>
</resources>
