<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cpcrasher.survival.mainActivity.MainActivity">


    <Button
        android:text="@string/suppNeeds_butt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/suppNeeds_butt"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/basicNeeds_butt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:height="70dp"
        android:background="@color/colorAccent"
        android:minHeight="54dp" />

    <Button
        android:text="@string/surroundings_butt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/surroundings_butt"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/suppNeeds_butt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:height="70dp"
        android:background="?android:attr/colorPressedHighlight" />

    <Button
        android:text="@string/extra_butt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/extra_butt"
        android:layout_below="@+id/surroundings_butt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:height="70dp"
        android:background="@color/colorEarth" />

    <Button
        android:text="@string/basicNeeds_butt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/basicNeeds_butt"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="45dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:height="70dp"
        android:background="@android:color/holo_red_light" />
</RelativeLayout>
